--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ body {
 .contenedor {
 	width: 95%;
 	margin: 0 auto;
+	margin-bottom: 60px;
 }
 /*form styles*/
 #msform {
@@ -169,14 +170,16 @@ body {
 }
 .img-uaeos {
     text-align: center;
-    box-shadow: 0 0 15px 1px rgb(0 0 0 / 10%);
-    margin-top: 30px;
+    /* box-shadow: 0 0 15px 1px rgb(0 0 0 / 10%); */
+    /* margin-top: 30px; */
 	position: relative;
+	border-bottom: 1px solid #e5e3e3;
 }
 .title-home {
-	font-weight: 600;
+	font-weight: 550;
 	width: 50%;
 	display: inline-flex;
+	font-family: 'montserrat', sans-serif;
 }
 .name-user {
 	position: absolute;
@@ -243,6 +246,37 @@ hr {
     background-color: #3366cc;
     border-color: 33366cc;
 }
-.img-uaeos-login {
-	width: ;
+.card-body .img-uaeos-login {
+	width: 294px !important;
+    margin-top: -33px !important;
 }
+.textoHeader p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: rgb(102 153 255);
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-weight: 800;
+    margin-top: 40px;
+}
+.btn-save {
+	background: #3366cc !important;
+	color: white;
+	position: relative;
+    right: -41%;
+}
+.form-compromiso {
+	border: 2px solid #cfcfcf;
+    padding: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 35%;
+    margin-top: 43px;
+    border-radius: 15px 15px 15px 15px;
+}
+.search-file {
+	margin-top: 39px;
+	cursor: pointer;
+}
+
